--- a/README.html
+++ b/README.html
@@ -55,7 +55,7 @@
               <article class="markdown-body entry-content" itemprop="text" id="grip-content">
                 <h1>
 <a id="user-content-director" class="anchor" href="#director" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Director</h1>
-<p>Felxible, fast and powerful supervisor library for Erlang processes.</p>
+<p>Flexible, fast and powerful supervisor library for Erlang processes.</p>
 <h2>
 <a id="user-content-synopsis" class="anchor" href="#synopsis" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>synopsis</h2>
 <h5>
