--- a/README.html
+++ b/README.html
@@ -70,13 +70,13 @@ In Erlang/Elixir we tell supervisors to start other processes and restart them i
 <a id="user-content-features" class="anchor" href="#features" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Features:</h2>
 <ul>
 <li>Restart child if child crashed with any reason.</li>
-<li>Restart child if child crashed with some specific reason(s).</li>
+<li>Restart child if child crashed with some specific reasons.</li>
 <li>Ignore restarting child if child crashed with any reason.</li>
-<li>Ignore restarting child if child crashed with some specific reason(s).</li>
+<li>Ignore restarting child if child crashed with some specific reasons.</li>
 <li>Delete child from children if child crashed with any reason.</li>
-<li>Delete child from children if child crashed with some specific reason(s).</li>
+<li>Delete child from children if child crashed with some specific reasons.</li>
 <li>Restart child after spending time if child crashed with any reason.</li>
-<li>Restart child after spending time if child crashed with some specific reason(s).</li>
+<li>Restart child after spending time if child crashed with some specific reasons.</li>
 <li>Get pid of child if child is running in separate and atomic request.</li>
 <li>Get pids of all running children.</li>
 <li>Change plan of restarting child dynamically.</li>
