--- a/README.html
+++ b/README.html
@@ -56,7 +56,7 @@
                 <p><a href="https://camo.githubusercontent.com/a8c976da0413a08d32f4f329218e4a6ded633d81/68747470733a2f2f7472617669732d63692e6f72672f506f75726979612d4a6168616e62616b6873682f6469726563746f722e706e673f6272616e63683d6d6173746572" target="_blank"><img src="https://camo.githubusercontent.com/a8c976da0413a08d32f4f329218e4a6ded633d81/68747470733a2f2f7472617669732d63692e6f72672f506f75726979612d4a6168616e62616b6873682f6469726563746f722e706e673f6272616e63683d6d6173746572" alt="directror travis test status" data-canonical-src="https://travis-ci.org/Pouriya-Jahanbakhsh/director.png?branch=master" style="max-width:100%;"></a> <a href="https://hex.pm/packages/director"><img src="https://camo.githubusercontent.com/405d5495700841e21cec7eef2187850fcebe25ab/68747470733a2f2f696d672e736869656c64732e696f2f686578706d2f762f6469726563746f722e737667" alt="Hex version" title="Hex version" data-canonical-src="https://img.shields.io/hexpm/v/director.svg" style="max-width:100%;"></a></p>
 <h1>
 <a id="user-content-welcome" class="anchor" href="#welcome" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome</h1>
-<p><strong>Director</strong> is fast, powerful and flexible Erlang process <strong>supervisor</strong> and <strong>manager</strong>.</p>
+<p><strong>Director</strong> is fast, flexible, powerful and production-ready <strong>supervisor</strong> and <strong>manager</strong> for Erlang/Elixir processes.</p>
 <h2>
 <a id="user-content-synopsis" class="anchor" href="#synopsis" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Synopsis</h2>
 <p>According to the Erlang's manual documentation:</p>
@@ -69,30 +69,27 @@ In Erlang/Elixir we tell supervisors to start other processes and restart them i
 <h2>
 <a id="user-content-features" class="anchor" href="#features" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Features:</h2>
 <ul>
-<li>Restart child if child crashed with any reason.</li>
-<li>Restart child if child crashed with some specific reasons.</li>
-<li>Ignore restarting child if child crashed with any reason.</li>
-<li>Ignore restarting child if child crashed with some specific reasons.</li>
-<li>Delete child from children if child crashed with any reason.</li>
-<li>Delete child from children if child crashed with some specific reasons.</li>
-<li>Restart child after spending time if child crashed with any reason.</li>
-<li>Restart child after spending time if child crashed with some specific reasons.</li>
-<li>Get pid of child if child is running in separate and atomic request.</li>
-<li>Get pids of all running children.</li>
-<li>Change plan of restarting child dynamically.</li>
-<li>Set some values as defaults and start children with that default values. (for example <code>mfa</code> of child, its more like <code>simple_one_for_one</code> strategy of OTP/Supervisor)</li>
-<li>Change default values for starting children dynamically.</li>
-<li>A <strong>Director</strong> process can give response for all API functions of OTP/Supervisor module !</li>
+<li>If a child crashed, <strong>Director</strong> can do following works (Depends on your childspec plan):
+<ul>
+<li>Restart child.</li>
+<li>Restart child after time interval.</li>
+<li>Delete child from its children.</li>
+<li>Wait for calling <code>restart_child/2-3</code> for restarting.</li>
+<li>Crash itself.</li>
+</ul>
+</li>
+<li>A <strong>Director</strong> process can give response for all API functions of OTP/Supervisor module (for example <code>director:which_children(Pid)</code> <code>=:=</code> <code>supervisor:which_children(Pid)</code>).</li>
 <li>
-<strong>Director</strong> is not a generic behavior like <code>gen_sever</code>, etc. It was written as Erlang special process and it's so fast ! (Don't worry about handling system messages, it handles)</li>
+<strong>Director</strong> does not write top of generic behaviors like <code>gen_sever</code>, etc. It was written as Erlang special process and it is blazingly fast.</li>
 <li>
 <strong>Director</strong> has its own clean debug output for any working state (Standard OTP/sys debug).</li>
+<li>In <strong>Director</strong> every child can has its own filter for validating its log for starting and crashing.</li>
 <li>
-<strong>Director</strong> makes necessary reports to <code>error_logger</code> just like OTP/Supervisor.(So some useful libraries like <code>lager</code> can use its output and don't need to write new code for understanding <strong>Director</strong>'s reports)</li>
+<strong>Director</strong> makes robust and flexible approach for starting and managing many children with one childspec.</li>
 <li>
-<strong>Director</strong> has 3 modes for giving details to <code>error_logger</code>: <code>short</code>, <code>long</code> and <code>none</code>, You can specify an Erlang fun for validating log which should returns one of these modes.</li>
+<strong>Director</strong> gives pids of all running children in separate request called <code>get_pids/1-2</code>.</li>
 </ul>
-<p>If you are familiar with OTP/supervisor, by comparing <strong>Director</strong> and OTP/Supervisor you can understand that it's more flexible and more useful.</p>
+<p>All features not listed here.</p>
 <p>For more info see <a href="https://github.com/Pouriya-Jahanbakhsh/director/wiki"><strong>Wiki</strong></a> page.</p>
 <h3>
 <a id="user-content-license" class="anchor" href="#license" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>License</h3>
