--- a/README.html
+++ b/README.html
@@ -56,7 +56,7 @@
                 <p><a href="https://camo.githubusercontent.com/a8c976da0413a08d32f4f329218e4a6ded633d81/68747470733a2f2f7472617669732d63692e6f72672f506f75726979612d4a6168616e62616b6873682f6469726563746f722e706e673f6272616e63683d6d6173746572" target="_blank"><img src="https://camo.githubusercontent.com/a8c976da0413a08d32f4f329218e4a6ded633d81/68747470733a2f2f7472617669732d63692e6f72672f506f75726979612d4a6168616e62616b6873682f6469726563746f722e706e673f6272616e63683d6d6173746572" alt="directror travis test status" data-canonical-src="https://travis-ci.org/Pouriya-Jahanbakhsh/director.png?branch=master" style="max-width:100%;"></a> <a href="https://hex.pm/packages/director"><img src="https://camo.githubusercontent.com/405d5495700841e21cec7eef2187850fcebe25ab/68747470733a2f2f696d672e736869656c64732e696f2f686578706d2f762f6469726563746f722e737667" alt="Hex version" title="Hex version" data-canonical-src="https://img.shields.io/hexpm/v/director.svg" style="max-width:100%;"></a></p>
 <h1>
 <a id="user-content-welcome" class="anchor" href="#welcome" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome</h1>
-<p><strong>Director</strong> is fast, flexible, powerful and production-ready <strong>supervisor</strong> and <strong>manager</strong> for Erlang/Elixir processes.</p>
+<p><strong>Director</strong> is a production-ready <strong>supervisor</strong> and <strong>manager</strong> for Erlang/Elixir processes with focus on speed and flexibility.</p>
 <h2>
 <a id="user-content-synopsis" class="anchor" href="#synopsis" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Synopsis</h2>
 <p>According to the Erlang's manual documentation:</p>
